--- a/mines.html
+++ b/mines.html
@@ -54,10 +54,13 @@
                     <span class="currency">₽</span>
                 </div>
                 <div class="mines-control">
-                    <input type="number" class="mines-input" placeholder="Количество мин" min="1" max="24" value="3">
-                    <div class="difficulty">
-                        <span class="difficulty-label">Сложность:</span>
-                        <span class="difficulty-value">Средняя</span>
+                    <input type="number" class="mines-input" placeholder="Количество мин" min="3" max="24" value="3">
+                    <div class="mines-presets">
+                        <button class="mines-preset" data-mines="3">3</button>
+                        <button class="mines-preset" data-mines="5">5</button>
+                        <button class="mines-preset" data-mines="7">7</button>
+                        <button class="mines-preset" data-mines="20">20</button>
+                        <button class="mines-preset" data-mines="25">25</button>
                     </div>
                 </div>
                 <div class="multiplier-display">
